@@ -77,7 +77,7 @@ private:
   static ACE_THR_FUNC_RETURN
   tracker_thunk (void* arg)
   {
-    Agent* a (reinterpret_cast<Agent*> (arg));
+    Agent* a = reinterpret_cast<Agent*> (arg);
     a->tracker ();
     return 0;
   }
@@ -227,7 +227,7 @@ main (int argc, char* argv[])
       return -1;
   }
 
-  ns->init (orb.in () /*ACE_ENV_ARG_PARAMETER*/);
+  ns->init_service (orb.in () /*ACE_ENV_ARG_PARAMETER*/);
   //ACE_CHECK_RETURN (-1);
 
 
